configure FindBugs plugin; fix or filter all reported bugs